force-app/main/default/objects/Log_Entry_Event__e/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <label>ExceptionType</label>
    <type>Text</type>
    <length>255</length>
</CustomField>