force-app/main/default/objects/Log_Entry_Event__e/fields/OccurredAt__c.field-meta.xml
<CustomField>
    <fullName>OccurredAt__c</fullName>
    <label>Occurred At</label>
    <type>DateTime</type>
</CustomField>