force-app/main/default/objects/Log_Entry_Event__e/fields/ParentLogTransactionId__c.field-meta.xml
<CustomField>
    <fullName>ParentLogTransactionId__c</fullName>
    <label>Parent Log Transaction Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>