force-app/main/default/objects/Log_Entry_Event__e/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <label>Quiddity</label>
    <type>Text</type>
    <length>40</length>
    <description>Execution context captured automatically via Request.getCurrent().getQuiddity() — e.g. BATCH_APEX, QUEUEABLE, FUTURE, VF, AURA, RUNTEST.</description>
</CustomField>