force-app/main/default/objects/Log_Entry_Event__e/fields/RunningUser__c.field-meta.xml
<CustomField>
    <fullName>RunningUser__c</fullName>
    <label>RunningUser</label>
    <type>Text</type>
    <length>255</length>
</CustomField>