force-app/main/default/objects/Log_Entry_Event__e/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>Text</type>
    <length>500</length>
    <description>Semicolon-separated tag names set via LogEntryBuilder.addTag()/addTags(). Split and normalized into Log_Tag__c/Log_Entry_Tag__c on persist.</description>
</CustomField>