force-app/main/default/objects/Log_Entry_Event__e/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <label>TransactionId</label>
    <type>Text</type>
    <length>255</length>
</CustomField>